Fix light/dark mode scrollbar colors

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -32,9 +32,9 @@
   --body-background: var(--color-white);
   --panel-background: var(--color-smoke-30);
   --panel-border-color: var(--color-smoke-90);
-  --scrollbar-track-color: var(--color-smoke-30);
-  --scrollbar-thumb-color: var(--color-gray-10);
-  --scrollbar_hover-thumb-color: var(--color-gray-30);
+  --scrollbar-track-color: #f7f7f7;
+  --scrollbar-thumb-color: #7f7f7f;
+  --scrollbar_hover-thumb-color: #7b7b7b;
   /* navbar */
   --navbar-background: var(--color-jet-80);
   --navbar-font-color: var(--color-white);
